--- a/qyh_jushen_ws/src/qyh_standard_robot/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_standard_robot/CMakeLists.txt
@@ -7,18 +7,67 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(qyh_standard_robot_msgs REQUIRED)
+
+# Include directories
+include_directories(
+  include
+  thirdparty/include
+)
+
+# Link directories
+link_directories(
+  thirdparty/lib/linux
+)
+
+# Add library
+add_library(${PROJECT_NAME}_node SHARED
+  src/standard_robot_node.cpp
+)
+
+target_compile_features(${PROJECT_NAME}_node PUBLIC c_std_99 cxx_std_17)
+
+ament_target_dependencies(${PROJECT_NAME}_node
+  rclcpp
+  rclcpp_components
+  std_msgs
+  geometry_msgs
+  qyh_standard_robot_msgs
+)
+
+target_link_libraries(${PROJECT_NAME}_node
+  modbus
+)
+
+rclcpp_components_register_nodes(${PROJECT_NAME}_node "qyh_standard_robot::StandardRobotNode")
+
+# Install
+install(TARGETS ${PROJECT_NAME}_node
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
+install(DIRECTORY include/
+  DESTINATION include
+)
+
+install(DIRECTORY launch config
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(DIRECTORY thirdparty/lib/linux/
+  DESTINATION lib
+  FILES_MATCHING PATTERN "*.so*"
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
