feat(robot_control): 添加机器人控制服务和手动运动指令功能
添加多个控制服务接口用于机器人操作，包括暂停/恢复移动、急停、充电控制等
实现手动运动指令订阅和超时处理，支持前进、后退、旋转等基本运动控制
更新.gitignore文件，添加开发环境相关忽略项

--- a/qyh_jushen_ws/src/qyh_standard_robot_msgs/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_standard_robot_msgs/CMakeLists.txt
@@ -26,6 +26,23 @@ endif()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/StandardRobotStatus.msg"
+  "msg/ManualMotionCommand.msg"
+  "srv/ControlPauseMove.srv"
+  "srv/ControlResumeMove.srv"
+  "srv/ControlStopMove.srv"
+  "srv/ControlStopLocalization.srv"
+  "srv/ControlEmergencyStop.srv"
+  "srv/ControlReleaseEmergencyStop.srv"
+  "srv/ControlStartCharging.srv"
+  "srv/ControlStopCharging.srv"
+  "srv/ControlEnterLowPowerMode.srv"
+  "srv/ControlExitLowPowerMode.srv"
+  "srv/ControlSystemReset.srv"
+  "srv/ControlStartManualControl.srv"
+  "srv/ControlStopManualControl.srv"
+  "srv/ControlPauseMission.srv"
+  "srv/ControlResumeMission.srv"
+  "srv/ControlCancelMission.srv"
   DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
 
