feat: Add VR control GUI and related functionalities
- Introduced a new GUI for controlling the JAKA dual-arm robot with VR capabilities.
- Added launch file for the VR control GUI.
- Implemented main GUI logic in vr_control_gui.py, including servo control, VR follow, and data recording features.
- Created new messages and services for VR functionality in qyh_jaka_control_msgs:
  - VRFollowStatus.msg: Contains status information for VR following.
  - VRPose.msg: Represents the pose data of VR devices.
  - EnableVRFollow.srv: Service to enable or disable VR following.
  - StartRecording.srv: Service to start recording VR data.
  - StopRecording.srv: Service to stop recording VR data.
  - CalibrateVR.srv: Service for calibrating VR coordinates to robot coordinates.
- Updated CMakeLists.txt and package.xml to include new messages and services.
- Added a shared library libjakaAPI.so for external dependencies.

--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -5,14 +5,83 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
 endif()
 
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(qyh_jaka_control_msgs REQUIRED)
 
+# Include directories
+include_directories(
+  include
+  ../jaka_control/thirdparty/include
+)
+
+# Link directories
+link_directories(
+  ../jaka_control/thirdparty/lib
+)
+
+# Libraries
+add_library(jaka_interface src/jaka_interface.cpp)
+ament_target_dependencies(jaka_interface
+  rclcpp
+  geometry_msgs
+  tf2
+  tf2_geometry_msgs
+)
+target_link_libraries(jaka_interface
+  jakaAPI
+)
+
+# Servo node with VR support
+add_executable(jaka_servo_node_vr src/jaka_servo_node_vr.cpp)
+ament_target_dependencies(jaka_servo_node_vr
+  rclcpp
+  geometry_msgs
+  tf2
+  tf2_geometry_msgs
+  qyh_jaka_control_msgs
+)
+target_link_libraries(jaka_servo_node_vr
+  jaka_interface
+  jakaAPI
+)
+
+# Original servo node (fallback)
 add_executable(jaka_servo_node src/jaka_servo_node.cpp)
 ament_target_dependencies(jaka_servo_node rclcpp qyh_jaka_control_msgs)
 
-install(TARGETS jaka_servo_node
-  DESTINATION lib/${PROJECT_NAME})
+install(TARGETS jaka_interface
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+
+install(TARGETS
+  jaka_servo_node_vr
+  jaka_servo_node
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY
+  include/
+  DESTINATION include
+)
+
+install(DIRECTORY
+  config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
+install(DIRECTORY
+  launch/
+  DESTINATION share/${PROJECT_NAME}/launch
+)
 
 ament_package()
