--- a/qyh_jushen_ws/src/qyh_jaka_control/package.xml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/package.xml
@@ -9,12 +9,14 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>qyh_jaka_control_msgs</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
