--- a/qyh_jushen_ws/src/qyh_jaka_control_msgs/package.xml
+++ b/qyh_jushen_ws/src/qyh_jaka_control_msgs/package.xml
@@ -16,6 +16,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
 
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
