feat: Add robot state management and motion services to JAKA control package

--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -12,6 +12,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_srvs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
@@ -48,6 +49,7 @@ add_executable(jaka_control_node src/jaka_control_node.cpp)
 ament_target_dependencies(jaka_control_node
   rclcpp
   std_srvs
+  sensor_msgs
   geometry_msgs
   tf2
   tf2_geometry_msgs
