--- a/qyh_jushen_ws/src/qyh_jaka_control/package.xml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/package.xml
@@ -10,6 +10,7 @@
 
   <build_depend>rclcpp</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
@@ -17,6 +18,7 @@
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
