--- a/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(qyh_jaka_control_msgs REQUIRED)
+find_package(qyh_vr_calibration_msgs REQUIRED)
 find_package(Protobuf REQUIRED)
 
 # Include directories
@@ -54,6 +55,7 @@ ament_target_dependencies(jaka_control_node
   tf2
   tf2_geometry_msgs
   qyh_jaka_control_msgs
+  qyh_vr_calibration_msgs
 )
 target_link_libraries(jaka_control_node
   jaka_interface
