--- a/qyh_jushen_ws/src/qyh_jaka_control/package.xml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/package.xml
@@ -15,6 +15,7 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>qyh_jaka_control_msgs</build_depend>
+  <build_depend>qyh_vr_calibration_msgs</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>std_srvs</exec_depend>
@@ -23,6 +24,7 @@
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>qyh_jaka_control_msgs</exec_depend>
+  <exec_depend>qyh_vr_calibration_msgs</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
