--- a/qyh_jushen_ws/src/qyh_gripper_control/config/gripper_left.yaml
+++ b/qyh_jushen_ws/src/qyh_gripper_control/config/gripper_left.yaml
@@ -1,6 +1,6 @@
 /**:
   ros__parameters:
-    device_port: "/dev/ttyS2"
+    device_port: "/dev/ttyUSB0"
     baudrate: 115200
     slave_id: 9
     publish_rate: 20.0
