--- a/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
+++ b/qyh_jushen_ws/src/qyh_jaka_control/config/robot_config.yaml
@@ -1,58 +1,66 @@
 # JAKA双臂机器人配置
+/**:
+  ros__parameters:
+    # 机器人连接参数
+    robot_ip: "192.168.2.200"
+    auto_connect: true
+    auto_initialize: false  # 启动后自动初始化（上电→使能→初始姿态→VR跟随）
 
-# 机器人连接参数
-robot_ip: "192.168.2.200"
-auto_connect: true
+    # 伺服控制参数
+    cycle_time_ms: 8.0  # 8ms = 125Hz (推荐)
+    use_cartesian: false  # true: 笛卡尔空间伺服, false: 关节空间伺服
+    
+    # 初始化姿态配置（弧度）
+    # 姿态1: 双臂张开姿态（home姿态的4轴和6轴改为0）
+    open_pose_joints: [0.0, -1.0472, 0.0, 0.0, 0.0, 0.0, 0.0,  # 左臂
+                       0.0, -1.0472, 0.0, 0.0, 0.0, 0.0, 0.0]  # 右臂
+    # 姿态2: 默认初始位置（左手: 0,-60,0,-50,0,50,0° | 右手: 0,-60,0,-50,0,-50,0°）
+    home_pose_joints: [0.0, -1.0472, 0.0, -0.8727, 0.0, 0.8727, 0.0,  # 左臂
+                       0.0, -1.0472, 0.0, -0.8727, 0.0, -0.8727, 0.0] # 右臂
+    # 运动参数
+    init_joint_velocity: 0.5  # rad/s
+    init_joint_acceleration: 0.3  # rad/s²
 
-# 伺服控制参数
-cycle_time_ms: 8.0  # 8ms = 125Hz (推荐)
-use_cartesian: false  # true: 笛卡尔空间伺服, false: 关节空间伺服
+    # VR跟随参数
+    vr_enabled: false
+    recording_output_dir: "/tmp/jaka_recordings"
+    recording_frequency: 125.0  # Hz
+    
+    # VR坐标系到机器人坐标系的转换（校准后设置）
+    vr_left_translation: [0.0, 0.0, 0.0]  # [x, y, z] in meters
+    vr_left_rotation: [0.0, 0.0, 0.0, 1.0]  # quaternion [x, y, z, w]
+    vr_right_translation: [0.0, 0.0, 0.0]
+    vr_right_rotation: [0.0, 0.0, 0.0, 1.0]
 
-# VR跟随参数
-vr_following:
-  enabled: false
-  recording_output_dir: "/tmp/jaka_recordings"
-  recording_frequency: 125.0  # Hz
-  
-  # VR坐标系到机器人坐标系的转换（校准后设置）
-  left_arm_transform:
-    translation: [0.0, 0.0, 0.0]  # [x, y, z] in meters
-    rotation: [0.0, 0.0, 0.0, 1.0]  # quaternion [x, y, z, w]
-  
-  right_arm_transform:
-    translation: [0.0, 0.0, 0.0]
-    rotation: [0.0, 0.0, 0.0, 1.0]
+    # 伺服滤波器设置
+    servo_filter_type: "carte_nlf"  # "none", "joint_lpf", "joint_nlf", "carte_nlf"
+    
+    # 笛卡尔空间非线性滤波参数
+    max_linear_velocity: 500.0  # mm/s
+    max_linear_acceleration: 2000.0  # mm/s²
+    max_linear_jerk: 10000.0  # mm/s³
+    max_angular_velocity: 180.0  # deg/s
+    max_angular_acceleration: 720.0  # deg/s²
+    max_angular_jerk: 3600.0  # deg/s³
+    
+    # 关节空间低通滤波参数
+    joint_lpf_cutoff_freq: 30.0  # Hz
+    
+    # 关节空间非线性滤波参数
+    joint_max_velocity: 180.0  # deg/s
+    joint_max_acceleration: 720.0  # deg/s²
+    joint_max_jerk: 3600.0  # deg/s³
 
-# 伺服滤波器设置
-servo_filter:
-  type: "carte_nlf"  # "none", "joint_lpf", "joint_nlf", "carte_nlf"
-  
-  # 笛卡尔空间非线性滤波参数
-  max_linear_velocity: 500.0  # mm/s
-  max_linear_acceleration: 2000.0  # mm/s²
-  max_linear_jerk: 10000.0  # mm/s³
-  max_angular_velocity: 180.0  # deg/s
-  max_angular_acceleration: 720.0  # deg/s²
-  max_angular_jerk: 3600.0  # deg/s³
-  
-  # 关节空间低通滤波参数
-  joint_lpf_cutoff_freq: 30.0  # Hz
-  
-  # 关节空间非线性滤波参数
-  joint_max_velocity: 180.0  # deg/s
-  joint_max_acceleration: 720.0  # deg/s²
-  joint_max_jerk: 3600.0  # deg/s³
+    # 安全参数
+    workspace_x_min: -1.0  # meters
+    workspace_x_max: 1.0
+    workspace_y_min: -1.0
+    workspace_y_max: 1.0
+    workspace_z_min: 0.0
+    workspace_z_max: 1.5
+    
+    collision_enabled: true
+    collision_level: 2  # 0-5, higher = more sensitive
 
-# 安全参数
-safety:
-  workspace_limits:
-    x_min: -1.0  # meters
-    x_max: 1.0
-    y_min: -1.0
-    y_max: 1.0
-    z_min: 0.0
-    z_max: 1.5
   
-  collision_detection:
-    enabled: true
-    level: 2  # 0-5, higher = more sensitive
+  
