--- a/qyh_jushen_ws/src/qyh_vr_calibration/package.xml
+++ b/qyh_jushen_ws/src/qyh_vr_calibration/package.xml
@@ -9,6 +9,13 @@
   <depend>rclpy</depend>
   <depend>qyh_vr_calibration_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+
+  <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>python3-scipy</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
