feat: Add CalibrationProfile message and update dependencies in CMake and package.xml

--- a/qyh_jushen_ws/src/qyh_vr_calibration_msgs/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_vr_calibration_msgs/CMakeLists.txt
@@ -7,10 +7,12 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 set(msg_files
   "msg/CalibrationPose.msg"
+  "msg/CalibrationProfile.msg"
 )
 
 set(srv_files
@@ -25,7 +27,7 @@ set(srv_files
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
   ${srv_files}
-  DEPENDENCIES geometry_msgs
+  DEPENDENCIES geometry_msgs builtin_interfaces
 )
 
 ament_export_dependencies(rosidl_default_runtime)
