--- a/qyh_jushen_ws/src/qyh_vr_calibration_msgs/package.xml
+++ b/qyh_jushen_ws/src/qyh_vr_calibration_msgs/package.xml
@@ -10,9 +10,11 @@
 
   <build_depend>rosidl_default_generators</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>builtin_interfaces</build_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>builtin_interfaces</exec_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
