feat: 添加手动速度控制命令，移除手动控制服务

--- a/qyh_jushen_ws/src/qyh_standard_robot_msgs/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_standard_robot_msgs/CMakeLists.txt
@@ -27,6 +27,7 @@ endif()
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/StandardRobotStatus.msg"
   "msg/ManualMotionCommand.msg"
+  "msg/ManualVelocityCommand.msg"
   "msg/NavigationPose.msg"
   "msg/NavigationStatus.msg"
   "srv/ControlPauseMove.srv"
@@ -48,7 +49,6 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GoSetSpeedType.srv"
   "srv/GoNavigateToCoordinate.srv"
   "srv/GoExecuteActionTask.srv"
-  "srv/GoSetManualControl.srv"
   "srv/GoSetObstacleStrategy.srv"
   "srv/GoSetCurrentSite.srv"
   "srv/GoSetSpeakerVolume.srv"
