--- a/qyh_jushen_ws/src/qyh_standard_robot/config/standard_robot.yaml
+++ b/qyh_jushen_ws/src/qyh_standard_robot/config/standard_robot.yaml
@@ -7,3 +7,7 @@ standard_robot_node:
     
     # Publishing rate (Hz)
     publish_rate: 10.0           # Rate to publish robot status (10 Hz recommended)
+    
+    # Manual control parameters
+    manual_control_rate: 20.0    # Rate to execute manual control commands (20 Hz = 50ms)
+    manual_command_timeout_ms: 300  # Timeout for manual commands (300ms, frontend sends every 100ms)
