feat: 添加导航到站点的服务和处理函数，更新相关配置

--- a/qyh_jushen_ws/src/qyh_standard_robot_msgs/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_standard_robot_msgs/CMakeLists.txt
@@ -55,6 +55,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GoSetCurrentMap.srv"
   "srv/GoForceLocalize.srv"
   "srv/GoNavigateToPoseWithTask.srv"
+  "srv/GoNavigateToSite.srv"
   "srv/GoNavigateToSiteWithTask.srv"
   DEPENDENCIES geometry_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
