feat: add payload management functionality with set and get services

--- a/qyh_jushen_ws/src/qyh_jaka_control_msgs/CMakeLists.txt
+++ b/qyh_jushen_ws/src/qyh_jaka_control_msgs/CMakeLists.txt
@@ -31,6 +31,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GetRobotState.srv"
   "srv/Jog.srv"
   "srv/JogStop.srv"
+  "srv/SetPayload.srv"
+  "srv/GetPayload.srv"
   DEPENDENCIES std_msgs geometry_msgs
 )
 
