--- a/qyh_jushen_ws/src/qyh_vr_calibration/package.xml
+++ b/qyh_jushen_ws/src/qyh_vr_calibration/package.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>qyh_vr_calibration</name>
-  <version>0.1.0</version>
-  <description>VR Calibration management node</description>
+  <version>0.2.0</version>
+  <description>VR Clutch mode teleoperation controller</description>
   <maintainer email="dev@example.com">qyh</maintainer>
   <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
-  <depend>qyh_vr_calibration_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
-  <depend>tf2_ros</depend>
-  <depend>tf2_geometry_msgs</depend>
+  <depend>qyh_jaka_control_msgs</depend>
 
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-scipy</exec_depend>
