--- a/qyh_jushen_ws/src/qyh_dual_arms_description/config/joint_limits.yaml
+++ b/qyh_jushen_ws/src/qyh_dual_arms_description/config/joint_limits.yaml
@@ -1,129 +1,141 @@
 # JAKA Zu7 关节限制配置
-# 用于MoveIt和轨迹规划
+# 基于真实机器人参数（从 JAKA 控制器读取）
+# 用于 MoveIt 和轨迹规划
+#
+# 真机参数 (度):
+#   J1: ±360°, 90°/s
+#   J2: ±105°, 90°/s  
+#   J3: ±360°, 120°/s
+#   J4: +30°/-145°, 120°/s (非对称!)
+#   J5: ±360°, 150°/s
+#   J6: ±105°, 150°/s
+#   J7: ±360°, 150°/s
 
 joint_limits:
+  # ==================== 左臂 ====================
   left_joint1:
     has_position_limits: true
-    min_position: -3.05
-    max_position: 3.05
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 1.571   # 90°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5  # 保守值，用于轨迹平滑
+    max_acceleration: 2.0
   
   left_joint2:
     has_position_limits: true
-    min_position: -2.09
-    max_position: 2.09
+    min_position: -1.833  # -105°
+    max_position: 1.833   # +105°
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 1.571   # 90°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   left_joint3:
     has_position_limits: true
-    min_position: -3.05
-    max_position: 3.05
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 2.094   # 120°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   left_joint4:
     has_position_limits: true
-    min_position: -2.09
-    max_position: 2.09
+    min_position: -2.531  # -145° (非对称!)
+    max_position: 0.524   # +30°  (非对称!)
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 2.094   # 120°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   left_joint5:
     has_position_limits: true
-    min_position: -3.05
-    max_position: 3.05
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.618   # 150°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   left_joint6:
     has_position_limits: true
-    min_position: -2.09
-    max_position: 2.09
+    min_position: -1.833  # -105°
+    max_position: 1.833   # +105°
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.618   # 150°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   left_joint7:
     has_position_limits: true
-    min_position: -6.28
-    max_position: 6.28
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.618   # 150°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
+  # ==================== 右臂 ====================
   right_joint1:
     has_position_limits: true
-    min_position: -3.05
-    max_position: 3.05
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 1.571   # 90°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   right_joint2:
     has_position_limits: true
-    min_position: -2.09
-    max_position: 2.09
+    min_position: -1.833  # -105°
+    max_position: 1.833   # +105°
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 1.571   # 90°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   right_joint3:
     has_position_limits: true
-    min_position: -3.05
-    max_position: 3.05
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 2.094   # 120°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   right_joint4:
     has_position_limits: true
-    min_position: -2.09
-    max_position: 2.09
+    min_position: -2.531  # -145° (非对称!)
+    max_position: 0.524   # +30°  (非对称!)
     has_velocity_limits: true
-    max_velocity: 2.79
+    max_velocity: 2.094   # 120°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   right_joint5:
     has_position_limits: true
-    min_position: -3.05
-    max_position: 3.05
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.618   # 150°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   right_joint6:
     has_position_limits: true
-    min_position: -2.09
-    max_position: 2.09
+    min_position: -1.833  # -105°
+    max_position: 1.833   # +105°
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.618   # 150°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
   
   right_joint7:
     has_position_limits: true
-    min_position: -6.28
-    max_position: 6.28
+    min_position: -6.283  # -360°
+    max_position: 6.283   # +360°
     has_velocity_limits: true
-    max_velocity: 3.32
+    max_velocity: 2.618   # 150°/s
     has_acceleration_limits: true
-    max_acceleration: 0.5
+    max_acceleration: 2.0
